--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styel.css">
     <title>Web Page</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <div class="game">
+        <h1>Choose Your Play</h1>
+        <div class="btn-wraper">
+            <button class="btn-pl rock">Rock</button>
+            <button class="btn-pl paper">Paper</button>
+            <button class="btn-pl scissor">Scissor</button>
+        </div>
+        <div class="result">
 
+        </div>
+    </div>
+
+
+
+
+
+
+    <script src="index.js">
+
+    </script>
+    
 </body>
 </html>
